# RePlan

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_infer.txt
replan/eval/: __init__.py  api_config.yaml  configuration_eval.py  evaluate.py  gen_samples_bagel.py  gen_samples_instructpix2pix.py  gen_samples_kontext.py  gen_samples_kontext_rephrase.py  gen_samples_qwen_image.py  gen_samples_replan.py  image_qa.py
replan/eval/config/: bagel.yaml  flux_kontext.yaml  instructpix2pix.yaml  qwen_image.yaml  qwen_image_2509.yaml  qwen_kontext_rephrase.yaml  replan_flux.yaml  replan_qwen_image.yaml
replan/eval/prompt_templates/: consistency.txt  quality.txt  target_following.txt
replan/eval/scripts/: gen_bagel.sh  gen_instructpix2pix.sh  gen_kontext.sh  gen_kontext_rephrase.sh  gen_qwen_image.sh  gen_replan.sh  scripts.sh
replan/inference/: __init__.py  app.py  app_test.py  run_replan.py
replan/pipelines/: flex_attn.py  flux_kontext.py  qwen_image.py  replan.py
replan/pipelines/prompt_template/: rephrase.txt  replan.txt  unified.txt
replan/train/: config.py  data_loader.py  dataset.py  main.py  reward_managers.py
replan/train/configs/: detection.yaml  stage1.yaml  stage2.yaml  uni_stage.yaml  uni_stage_with_detection.yaml
replan/train/format_prompt/: reason_detection.jinja  replan.jinja  unified.jinja
replan/train/reward_function/: kontext_server.py  load_balancer.py  qwen_vl_reward.py  remote_reward.py  replan_reward.py  start_kontext_server.sh
verl/: protocol.py
verl/trainer/: config.py  main.py
verl/utils/: dataset.py
(+5 files in other folders)
