[project]
name = "replan"
version = "0.1.0"
description = "RePlan: An instruction-based image editing framework using MLLM planning and region-aligned guidance."
authors = [
    {name = "TianyuanQu"}
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.5.0",
    "transformers==4.52.4",
    "diffusers>=0.36.0.dev0", 
    "accelerate",
    "peft",
    "einops",
    "safetensors",
    "numpy<2.3.0",
    "pandas",       
    "scipy",         
    "pillow",       
    "datasets",
    "qwen_vl_utils==0.0.14",
    "tqdm",
    "omegaconf",
    "pyyaml",       
    "requests",      
    "huggingface_hub",
    "wandb",         
    "fastapi",
    "pydantic",     
    "uvicorn",      
    "gradio",       
    "torchvision",
    "sentencepiece",
    "triton==3.1.0"
]

[project.optional-dependencies]
full = [
    "aiohttp",
    "codetiming",
    "filelock",
    "google_cloud_aiplatform",
    "jinja2",     
    "mlflow",
    "openai",
    "packaging",
    "protobuf",
    "psutil",
    "swanlab",
    "tensordict",
    "torchdata",
    "vertexai",
    "liger-kernel",
    "mathruler",
    "pyarrow>=15.0.0",
    "pylatexenc",
    "ray[default]",
    "vllm==0.9.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."] 
include = ["replan*", "verl*"]
namespaces = false